--- a/06-building-container-images/api-node/Dockerfile.9
+++ b/06-building-container-images/api-node/Dockerfile.9
@@ -9,7 +9,7 @@ WORKDIR /usr/src/app
 # dependencies (better layer caching)
 COPY package*.json ./
 
-FROM base as dev
+FROM base AS dev
 
 RUN --mount=type=cache,target=/usr/src/app/.npm \
   npm set cache /usr/src/app/.npm && \
@@ -19,7 +19,7 @@ COPY . .
 
 CMD ["npm", "run", "dev"]
 
-FROM base as production
+FROM base AS production
 
 # Set NODE_ENV
 ENV NODE_ENV production
